[metadata]
name = tf-centernet
version = attr: centernet.VERSION
authors = ["Licht Takeuchi"]
description = CenterNet implementation by Tensorflow 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Licht-T/tf-centernet
keywords = centernet, tensorflow
license = MIT
license_files = LICENSE
classifiers =
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
pythonrequire = >=3.7,4.0>
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pillow
    tensorflow
    numpy

[options.packages.find]
exclude =
    tests
